tests/paczka1/small_fuzzy/65574025.err
Error in line 5: lLLGUJCTw9 S28P P3,5
Error in line 4: w33eDFaAx S282 9,1
Error in line 1: kSHtcM S519 84,2
